GNOME Bugzilla – Bug 662218
nautilus crashed with SIGSEGV in gtk_tree_model_get_valist()
Last modified: 2011-10-19 18:57:17 UTC
Using nautilus 3.2.1 The bug has been reported on https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/876621 Description: "open nautilus, choose right click -> open in new tab when on the empty space in the sidebar. nautilus crashes after a few attempts (usually 2 attempts for me). repeatable." Stacktrace: "#0 0x00f1253b in gtk_tree_model_get_valist (tree_model=0x8d2ff68, iter=0xbfe9e02c, var_args=<optimized out>) at /build/buildd/gtk+3.0-3.2.0/./gtk/gtktreemodel.c:1768 _value = 0xbfe9df6c _flags = 0 _value_type = <optimized out> _vtable = <optimized out> _cvalues = {{v_int = 52, v_long = 52, v_int64 = 4294967348, v_double = 2.1219958166566859e-314, v_pointer = 0x34}, {v_int = 0, v_long = 0, v_int64 = 336066703987310592, v_double = 3.4082466254956989e-286, v_pointer = 0x0}, {v_int = 0, v_long = 0, v_int64 = 340725407768641536, v_double = 6.9612463149614059e-286, v_pointer = 0x0}, {v_int = 52, v_long = 52, v_int64 = 103079215156, v_double = 5.0927899008857949e-313, v_pointer = 0x34}, {v_int = 15794092, v_long = 15794092, v_int64 = 336140890973208492, v_double = 3.4428646329481596e-286, v_pointer = 0xf0ffac}, {v_int = 148723864, v_long = 148723864, v_int64 = 68868200600, v_double = 3.4025412007363523e-313, v_pointer = 0x8dd5898}, {v_int = 460960768, v_long = 460960768, v_int64 = 640214663190656000, v_double = 7.1715210211407144e-266, v_pointer = 0x1b79b400}, {v_int = 52, v_long = 52, v_int64 = 340747449540804660, v_double = 6.9818170990085865e-286, v_pointer = 0x34}} _lcopy_format = <optimized out> _n_values = <optimized out> value = {g_type = 0, data = {{v_int = 0, v_uint = 0, v_long = 0, v_ulong = 0, v_int64 = 0, v_uint64 = 0, v_float = 0, v_double = 0, v_pointer = 0x0}, {v_int = 0, v_uint = 0, v_long = 0, v_ulong = 0, v_int64 = 0, v_uint64 = 0, v_float = 0, v_double = 0, v_pointer = 0x0}}} error = 0x0 column = <optimized out> __PRETTY_FUNCTION__ = "gtk_tree_model_get_valist"
+ Trace 228860
*** Bug 662214 has been marked as a duplicate of this bug. ***
the stacktrace seems similar to the issue fixed in http://git.gnome.org/browse/nautilus/commit/?h=gnome-3-2&id=aa26a4d70d463e4f4e1a1d7ae0252e51d8f5e4a2 but it's not quite the same and still happening with 3.2.1
Yeah, it was actually a similar bug. I pushed a patch for this now to master and gnome-3-2, thanks for the report.